# Smart-Air-Monitoring

./: .gitignore  CMakeLists.txt  DHT22_M5StickC_Instructions.md  README.md  partitions.csv
Dashboard/: mesh-dashboard.css  mesh-dashboard.html
components/air_mqtt/: CMakeLists.txt  air_mqtt.c  air_mqtt.h
components/ble_mesh/: CMakeLists.txt
components/ble_mesh/bridge/: ble_bridge.c  ble_bridge.h
components/ble_mesh/node/: node.c  node.h
components/configuration/: air_ble_mesh.h  air_mesh.h
components/display/: CMakeLists.txt  display.c  display.h
components/mesh/: CMakeLists.txt
components/mesh/auth/: mesh_auth.c  mesh_auth.h
components/mesh/ble_mesh/: ble_bridge.c  ble_bridge.h  ble_mesh_init.c  ble_mesh_init.h
components/mesh/flooding/: mesh_gossip.c  mesh_gossip.h
components/mesh/initialization/: mesh_init.c  mesh_init.h
components/mesh/routing/: mesh_routing.c  mesh_routing.h
components/mode_switch/: CMakeLists.txt  mode_switch.c  mode_switch.h
components/sensor/: CMakeLists.txt  sensor.c  sensor.h
components/sensor/dht22/: CMakeLists.txt  DHT22.c  DHT22.h
components/utils/: CMakeLists.txt  utils.c  utils.h
components/wifi/: CMakeLists.txt  wifi_service.c  wifi_service.h
dashboard/: README.md  main.py  models.py  mqtt_client.py  requirements.txt  simulator.py
dashboard/static/: index.html
main/: CMakeLists.txt  main.c
